# tieteellinen-laskin

./: .coveragerc  README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: calculator.py  index.py  ui.py
src/algorithms/: result_calculator.py  shunting_yard.py  validator.py
src/tests/: calculator_test.py  shunting_yard_test.py  validator_test.py
