[tool.poetry]
name = "tieteellinen-laskin"
version = "0.1.0"
description = ""
authors = ["Vesa Rautiainen <veskurau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
autopep8 = "^2.0.4"
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
